--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
+# Python
+__pycache__/
+*.pyc
+
+# Node
 node_modules/
+
+# Environment variables
+.env
+
+# Cache folders
+.cache/
+.next/
+.expo/
+
+# OS
+.DS_Store
+Thumbs.db
